<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileFragment">

    <ImageView
        android:id="@+id/cityTimeIv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/jarambaLogoWhiteIv"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image"
        android:src="@drawable/logo_jaramba_fix_03"
        app:layout_constraintBottom_toBottomOf="@+id/cityTimeIv"
        app:layout_constraintEnd_toEndOf="@id/cityTimeIv"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/cityTimeIv"
        app:layout_constraintTop_toTopOf="@+id/cityTimeIv"
        app:layout_constraintVertical_bias="0.165" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_baseline_face_1"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jarambaLogoWhiteIv" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imageUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        app:tint="@android:color/white"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/userImageIv"
        app:layout_constraintTop_toTopOf="@+id/userImageIv" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_rounded_full_side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageIv" />


    <ImageView
        android:id="@+id/settingIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageIv"
        app:tint="@color/primary" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16sp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingIv" />

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/nomor_hp"
        android:hint="Username"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/no_handphone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEt" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/ganti_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEt" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toEndOf="@+id/btnChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/phoneEt" />

    <ImageView
        android:id="@+id/editUsernameIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_create_24"
        app:layout_constraintBottom_toBottomOf="@+id/usernameEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameEt"
        app:layout_constraintVertical_bias="0.461"
        app:tint="@color/primary" />

    <ImageView
        android:id="@+id/editPhoneIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_create_24"
        app:layout_constraintBottom_toBottomOf="@+id/phoneEt"
        app:layout_constraintEnd_toEndOf="@id/phoneEt"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="@id/phoneEt"
        app:layout_constraintTop_toTopOf="@+id/phoneEt"
        app:layout_constraintVertical_bias="0.423"
        app:tint="@color/primary" />


</androidx.constraintlayout.widget.ConstraintLayout>